--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "linkedin-clone",
+  "name": "rock-paper-scissors",
   "version": "1.0.0",
   "description": "",
   "main": "index.html",
